# financially-free-task

./: DATA_EXTRACTION_METHODS.md  INVESTOR_FINDINGS.md  README.md  main.py  pyproject.toml
dashboard/: app.py  data_loader.py  db_utils.py  four_wheeler.db  four_wheeler_data.csv  metrics.py  three_wheeler_data.csv  two_wheeler_data.csv  vehicle_data.db
