[tool.poetry]
name = "dashboard"
version = "0.1.0"
description = "Investor-focused vehicle registration analytics dashboard."
authors = ["krVatsal <your-email@example.com>"]
readme = "README.md"
packages = [
    { include = "dashboard" }
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pandas = "*"
streamlit = "*"
plotly = "*"
numpy = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
